# evolution-api

./: .gitignore  .replit  Dockerfile  README.md  docker-compose.simple.yaml  docker-compose.yml  env.example  example_usage.py  pyproject.toml  replit.nix  requirements.txt  run.py  tatus
_context/upstream/0-documentation/: broad-context.md
_context/upstream/0-documentation/0a-projectdocs/: context.md
_context/upstream/0-documentation/0b-Interviews/: experiencias-v1.md  sorteio-v1.md
_context/upstream/1-problem/1a-interview-analysis/: experiencias-analysis.md  sorteio-analysis.md
_context/upstream/1-problem/1b-painpoints/: painpoint-mapping.md
_context/upstream/1-problem/1b-painpoints/1b1-painpoints-breakdown/: experiencias-painpoints.md  sorteios-painpoints.md
_context/upstream/1-problem/1c-asis-journey/: asis-journey.md
_context/upstream/1-problem/1c-asis-journey/1c2-asis-breakdown/: experiencias-journey.md  sorteios-journey.md
_context/upstream/1-problem/1d-problem-output/: journey-output.md  pain-report.md  problem-report.md
_context/upstream/1-problem/1d-problem-output/visual_doc/: README.md  index.html  journey-output.html  pain-report.html  problem-report.html  script.js  styles.css
app/: __init__.py  config.py  evolution_client.py  idempotency.py  instance.py  main.py  messages.py  models.py  openai_client.py  queue.py  webhook.py
attached_assets/: Pasted-2025-08-18-13-23-12-11-730fa6eb-User-sh-1-python3-not-found-2025-08-18-13-23-12-11-730fa6eb--1755537400309_1755537400309.txt
docs/: collection.json
tests/: __init__.py  conftest.py  test_instance.py  test_sender.py  test_webhook.py
(+21 files in other folders)
